--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,12 @@ jdk:
 
 env:
   - REDPEN_VER=1.5.5
-  - URL=https://github.com/redpen-cc/redpen/releases/download/redpen-$REDPEN_VER
+  - URL=https://github.com/redpen-cc/redpen/releases/download/redpen-${REDPEN_VER}
 
 install:
-  - wget $URL/redpen-$REDPEN_VER.tar.gz
-  - tar xvf redpen-$REDPEN_VER.tar.gz
-  - export PATH=$PATH:$PWD/redpen-distribution-$REDPEN_VER/bin
+  - wget $URL/redpen-${REDPEN_VER}.tar.gz
+  - tar xvf redpen-${REDPEN_VER}.tar.gz
+  - export PATH=$PATH:$PWD/redpen-distribution-${REDPEN_VER}/bin
 
 script:
   - sudo apt-get update && sudo apt-get install oracle-java8-installer
