--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,16 @@
+language:
+  - java
+
 jdk:
   - oraclejdk8
 
 env:
-  - REDPEN_VER=1.5.5
-  - URL=https://github.com/redpen-cc/redpen/releases/download/redpen-${REDPEN_VER}
+  - URL=https://github.com/redpen-cc/redpen/releases/download/redpen-1.4.7
 
 install:
-  - wget $URL/redpen-${REDPEN_VER}.tar.gz
-  - tar xvf redpen-${REDPEN_VER}.tar.gz
-  - export PATH=$PATH:$PWD/redpen-distribution-${REDPEN_VER}/bin
+  - wget $URL/redpen-1.4.7.tar.gz
+  - tar xvf redpen-1.4.7.tar.gz
+  - export PATH=$PATH:$PWD/redpen-distribution-1.4.7/bin
 
 script:
   - sudo apt-get update && sudo apt-get install oracle-java8-installer
