--- a/.travis.yml
+++ b/.travis.yml
@@ -21,4 +21,4 @@ install:
 script:
 #  - sudo apt-get update && sudo apt-get install oracle-java8-installer
 #  - make check
-  - docker run --rm -v `pwd`:/latex thii/platex build test.tex
+  - docker run --rm -v `pwd`:/latex thii/platex build main.tex
