--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,5 @@ script:
 #  - sudo apt-get update && sudo apt-get install oracle-java8-installer
 #  - make check
   - docker run --rm -v `pwd`:/latex thii/platex build main.tex
+  - ls
+  - ls latex
